# 66502emu

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  test.board
cmake/: LoadGlaze.cmake  LoadQt5.cmake
src/: 6502emu.rc  6502emu_de.ts  6502emu_en.ts  6502emu_en_US.ts  AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  BoardExecutor.cpp  BoardExecutor.h  BoardFile.cpp  BoardFile.h  BoardLoader.cpp  BoardLoader.h  CMakeLists.txt  DeviceConfigModel.cpp  DeviceConfigModel.h  DeviceConfigView.cpp  DeviceConfigView.h  DeviceConfigView.ui  DeviceManager.cpp  DeviceManager.h  DeviceManager.ui  DeviceViewCreator.cpp  DeviceViewCreator.h  KeySequence.cpp  KeySequence.h  LooseSignal.cpp  LooseSignal.h  M6502Disassembler.cpp  M6502Disassembler.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  Program.cpp  Program.h  ProgramFileWatcher.cpp  ProgramFileWatcher.h  ProgramLoader.cpp  ProgramLoader.h  (+5 more)
src/board/: ACIA.cpp  ACIA.h  Board.cpp  Board.h  Bus.cpp  Bus.h  BusConnection.cpp  BusConnection.h  CPU.cpp  CPU.h  Clock.cpp  Clock.h  Debugger.cpp  Debugger.h  Device.cpp  Device.h  LCD.cpp  LCD.h  Memory.cpp  Memory.h  VIA.cpp  VIA.h  WireState.h
src/codeeditor/: CodeEditor.cpp  CodeEditor.h  Highlighter.cpp  Highlighter.h  LineNumberArea.cpp  LineNumberArea.h
src/impl/: hd44780u.cpp  hd44780u.h  hd44780u_data.cpp  hd44780u_data.h  hd44780u_data.inl  m6502.cpp  m6502.h  m6522.cpp  m6522.h
src/utils/: ArrayView.cpp  ArrayView.h  BitManipulations.cpp  BitManipulations.h  Bits.h  Maths.h  Strings.cpp  Strings.h
src/views/: ACIAView.cpp  ACIAView.h  ACIAView.ui  BitsView.cpp  BitsView.h  BusView.cpp  BusView.h  BusView.ui  CPUView.cpp  CPUView.h  CPUView.ui  ClockView.cpp  ClockView.h  ClockView.ui  Console.cpp  Console.h  DeviceView.cpp  DeviceView.h  DisassemblerView.cpp  DisassemblerView.h  DisassemblerView.ui  GenericView.cpp  GenericView.h  HotkeyDialog.cpp  HotkeyDialog.h  HotkeyDialog.ui  LCDCharPanel.cpp  LCDCharPanel.h  LCDView.cpp  LCDView.h  LCDView.ui  MemoryPageView.cpp  MemoryPageView.h  MemoryView.cpp  MemoryView.h  MemoryView.ui  RegisterView.cpp  RegisterView.h  RegisterView.ui  SignalsView.cpp  (+14 more)
tests/: CMakeLists.txt  test_BitManipulations.cpp  test_Bus.cpp  test_LCDCharPanel.cpp  test_TransposeData.cpp
